overflow-bug fixed

--- a/src/app/background/background.component.scss
+++ b/src/app/background/background.component.scss
@@ -1,4 +1,7 @@
-
+.background {
+overflow-x:hidden;
+overflow:hidden;
+}
 
 
 @media (min-width: 390px) {
