--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,3 +1,7 @@
+.skill-section {
+    overflow-x: hidden;
+}
+
 .headline-skills {
     display: flex;
     flex-direction: row;
