--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ body {
   background-color: #141D2F;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', ;
   scroll-behavior: smooth;
+  overflow-x:hidden;
 }
 
 [data-aos][data-aos][data-aos-duration="50"],
